objects/InsurancePolicyCoverage.object
<CustomObject>
    <fields>
        <fullName>AW_Amount__c</fullName>
        <description>Amount of Coverage</description>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_BenefitAmount__c</fullName>
        <description>Benefit Amount</description>
        <label>Benefit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_CoverCategory__c</fullName>
        <description>Select Cover Category</description>
        <label>Cover Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Protection</fullName>
                </value>
                <value>
                    <fullName>Retirement</fullName>
                </value>
                <value>
                    <fullName>Investment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_CoverSubCategory__c</fullName>
        <description>Select Cover Sub Category</description>
        <label>Cover Sub Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Life Cover</fullName>
                </value>
                <value>
                    <fullName>Policy Protection</fullName>
                </value>
                <value>
                    <fullName>Retirement Annuity</fullName>
                </value>
                <value>
                    <fullName>Feature</fullName>
                </value>
                <value>
                    <fullName>Income Protection - Monthly Income Benefit</fullName>
                </value>
                <value>
                    <fullName>Income Protection - Lump Sum Benefit</fullName>
                </value>
                <value>
                    <fullName>Lifestyle Protection</fullName>
                </value>
                <value>
                    <fullName>Income Protection - Annual Income Benefit</fullName>
                </value>
                <value>
                    <fullName>Income</fullName>
                </value>
                <value>
                    <fullName>Wellness Bonus</fullName>
                </value>
                <value>
                    <fullName>Endowment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_EndDate__c</fullName>
        <description>Insurance Policy Coverage End Date</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AW_IncomeProtection1st24MonthsBenefits__c</fullName>
        <description>A checkbox which returns TRUE if either of the Income Protection First 24 Months benefit Type Codes are selected.</description>
        <formula>OR(
ISPICKVAL( AW_TypeCode__c , &quot;102&quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Income Protection 1st 24 Months Benefits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AW_IncomeProtectionAfter24MnthsBenefits__c</fullName>
        <description>A checkbox which returns TRUE if either of the Income Protection After 24 Months benefit Type Codes are selected.</description>
        <formula>OR(
ISPICKVAL( AW_TypeCode__c , &quot;104&quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Income Protection After24 Mnths Benefits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AW_IncomeProtectionLumpsumBenefits__c</fullName>
        <description>A checkbox which returns TRUE if either of the Income Protection Lumpsum benefit Type Codes are selected. Used on a rollup summary on the Insurance Policy Object.</description>
        <formula>OR(
  ISPICKVAL( AW_TypeCode__c, &quot;7&quot;),
		ISPICKVAL( AW_TypeCode__c, &quot;007&quot;),
  ISPICKVAL( AW_TypeCode__c, &quot;20&quot;),
		ISPICKVAL( AW_TypeCode__c, &quot;020&quot;),
  ISPICKVAL( AW_TypeCode__c, &quot;21&quot;),
		ISPICKVAL( AW_TypeCode__c, &quot;021&quot;), 
  ISPICKVAL( AW_TypeCode__c, &quot;22&quot;),
		ISPICKVAL( AW_TypeCode__c, &quot;022&quot;), 
  ISPICKVAL( AW_TypeCode__c, &quot;23&quot;),
		ISPICKVAL( AW_TypeCode__c, &quot;023&quot;),
  ISPICKVAL( AW_TypeCode__c, &quot;27&quot;),
		ISPICKVAL( AW_TypeCode__c, &quot;027&quot;),
  ISPICKVAL( AW_TypeCode__c, &quot;28&quot;),
		ISPICKVAL( AW_TypeCode__c, &quot;028&quot;),
  ISPICKVAL( AW_TypeCode__c, &quot;46&quot;),
		ISPICKVAL( AW_TypeCode__c, &quot;046&quot;),
  ISPICKVAL( AW_TypeCode__c, &quot;47&quot;),
		ISPICKVAL( AW_TypeCode__c, &quot;047&quot;),
  ISPICKVAL( AW_TypeCode__c, &quot;48&quot;),
		ISPICKVAL( AW_TypeCode__c, &quot;048&quot;),
  ISPICKVAL( AW_TypeCode__c, &quot;53&quot;),
		ISPICKVAL( AW_TypeCode__c, &quot;053&quot;),
  ISPICKVAL( AW_TypeCode__c, &quot;54&quot;),
		ISPICKVAL( AW_TypeCode__c, &quot;054&quot;),
  ISPICKVAL( AW_TypeCode__c, &quot;55&quot;),
		ISPICKVAL( AW_TypeCode__c, &quot;055&quot;),
  ISPICKVAL( AW_TypeCode__c, &quot;77&quot;),
		ISPICKVAL( AW_TypeCode__c, &quot;077&quot;),
  ISPICKVAL( AW_TypeCode__c, &quot;78&quot;),
		ISPICKVAL( AW_TypeCode__c, &quot;078&quot;),
  ISPICKVAL( AW_TypeCode__c, &quot;84&quot;),
		ISPICKVAL( AW_TypeCode__c, &quot;084&quot;),
  ISPICKVAL( AW_TypeCode__c, &quot;85&quot;),
		ISPICKVAL( AW_TypeCode__c, &quot;085&quot;),
  ISPICKVAL( AW_TypeCode__c, &quot;86&quot;),
		ISPICKVAL( AW_TypeCode__c, &quot;086&quot;),
  ISPICKVAL( AW_TypeCode__c, &quot;94&quot;),
		ISPICKVAL( AW_TypeCode__c, &quot;094&quot;),
  ISPICKVAL( AW_TypeCode__c, &quot;100&quot;), 
  ISPICKVAL( AW_TypeCode__c, &quot;101&quot;), 
  ISPICKVAL( AW_TypeCode__c, &quot;105&quot;), 
  ISPICKVAL( AW_TypeCode__c, &quot;106&quot;), 
  ISPICKVAL( AW_TypeCode__c, &quot;107&quot;), 
  ISPICKVAL( AW_TypeCode__c, &quot;109&quot;), 
  ISPICKVAL( AW_TypeCode__c, &quot;111&quot;), 
  ISPICKVAL( AW_TypeCode__c, &quot;112&quot;), 
  ISPICKVAL( AW_TypeCode__c, &quot;113&quot;), 
  ISPICKVAL( AW_TypeCode__c, &quot;114&quot;), 
  ISPICKVAL( AW_TypeCode__c, &quot;115&quot;), 
  ISPICKVAL( AW_TypeCode__c, &quot;116&quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Income Protection (Lumpsum) Benefits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AW_IncomeProtectionMonthlyBenefits__c</fullName>
        <description>A checkbox which returns TRUE if either of the Income Protection Monthly benefit Type Codes are selected. Used on a rollup summary on the Insurance Policy Object.</description>
        <formula>OR(
ISPICKVAL( AW_TypeCode__c, &quot;17&quot;),
ISPICKVAL( AW_TypeCode__c, &quot;017&quot;),
ISPICKVAL( AW_TypeCode__c, &quot;19&quot;),
ISPICKVAL( AW_TypeCode__c, &quot;019&quot;),
ISPICKVAL( AW_TypeCode__c, &quot;29&quot;),
ISPICKVAL( AW_TypeCode__c, &quot;029&quot;),
ISPICKVAL( AW_TypeCode__c, &quot;35&quot;),
ISPICKVAL( AW_TypeCode__c, &quot;035&quot;),
ISPICKVAL( AW_TypeCode__c, &quot;36&quot;),
ISPICKVAL( AW_TypeCode__c, &quot;036&quot;),
ISPICKVAL( AW_TypeCode__c, &quot;37&quot;),
ISPICKVAL( AW_TypeCode__c, &quot;037&quot;),
ISPICKVAL( AW_TypeCode__c, &quot;42&quot;),
ISPICKVAL( AW_TypeCode__c, &quot;042&quot;),
ISPICKVAL( AW_TypeCode__c, &quot;43&quot;),
ISPICKVAL( AW_TypeCode__c, &quot;043&quot;),
ISPICKVAL( AW_TypeCode__c, &quot;59&quot;),
ISPICKVAL( AW_TypeCode__c, &quot;059&quot;),
ISPICKVAL( AW_TypeCode__c, &quot;70&quot;),
ISPICKVAL( AW_TypeCode__c, &quot;070&quot;),
ISPICKVAL( AW_TypeCode__c, &quot;71&quot;),
ISPICKVAL( AW_TypeCode__c, &quot;071&quot;),
ISPICKVAL( AW_TypeCode__c, &quot;72&quot;),
ISPICKVAL( AW_TypeCode__c, &quot;072&quot;),
ISPICKVAL( AW_TypeCode__c, &quot;79&quot;),
ISPICKVAL( AW_TypeCode__c, &quot;079&quot;),
ISPICKVAL( AW_TypeCode__c, &quot;102&quot;),
ISPICKVAL( AW_TypeCode__c, &quot;103&quot;),
ISPICKVAL( AW_TypeCode__c, &quot;104&quot;),
ISPICKVAL( AW_TypeCode__c, &quot;108&quot;)

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Income Protection (Monthly) Benefits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AW_InsurancePolicyParticipant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Insurance Policy Participant</description>
        <label>Insurance Policy Participant</label>
        <referenceTo>InsurancePolicyParticipant</referenceTo>
        <relationshipLabel>Insurance Policy Coverages</relationshipLabel>
        <relationshipName>InsurancePolicyCoverages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AW_LifeCoverBenefits__c</fullName>
        <description>A checkbox which returns TRUE if either of the Life Cover benefit Type Codes are selected. Used on a rollup summary on the Insurance Policy Object.</description>
        <formula>OR(
  ISPICKVAL( AW_TypeCode__c , &quot;1&quot;),
		ISPICKVAL( AW_TypeCode__c , &quot;001&quot;),
  ISPICKVAL( AW_TypeCode__c , &quot;3&quot;),
  ISPICKVAL( AW_TypeCode__c , &quot;004&quot;),
		ISPICKVAL( AW_TypeCode__c , &quot;4&quot;),
		ISPICKVAL( AW_TypeCode__c , &quot;003&quot;),
  ISPICKVAL( AW_TypeCode__c , &quot;8&quot;),
		ISPICKVAL( AW_TypeCode__c , &quot;008&quot;),
  ISPICKVAL( AW_TypeCode__c , &quot;9&quot;),
		ISPICKVAL( AW_TypeCode__c , &quot;009&quot;),
  ISPICKVAL( AW_TypeCode__c , &quot;10&quot;),
		ISPICKVAL( AW_TypeCode__c , &quot;010&quot;),
  ISPICKVAL( AW_TypeCode__c , &quot;11&quot;),
		ISPICKVAL( AW_TypeCode__c , &quot;011&quot;),
  ISPICKVAL( AW_TypeCode__c , &quot;14&quot;),
		ISPICKVAL( AW_TypeCode__c , &quot;014&quot;),
  ISPICKVAL( AW_TypeCode__c , &quot;031&quot;),
		ISPICKVAL( AW_TypeCode__c , &quot;31&quot;),
  ISPICKVAL( AW_TypeCode__c , &quot;034&quot;),
		ISPICKVAL( AW_TypeCode__c , &quot;34&quot;),
  ISPICKVAL( AW_TypeCode__c , &quot;052&quot;),
		ISPICKVAL( AW_TypeCode__c , &quot;52&quot;),
  ISPICKVAL( AW_TypeCode__c , &quot;110&quot;),
  ISPICKVAL( AW_TypeCode__c , &quot;119&quot;),
  ISPICKVAL( AW_Type__c , &quot;FUNERAL - PAID UP OPTION&quot;),
  ISPICKVAL( AW_Type__c , &quot;ACCIDENTAL DEATH&quot;),
  ISPICKVAL( AW_Type__c , &quot;TOMBSTONE&quot;),
  ISPICKVAL( AW_Type__c , &quot;INKOMO&quot;)

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Life Cover Benefits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AW_LifestyleProtectionBenefits__c</fullName>
        <description>A checkbox which returns TRUE if either of the Lifestyle Protection benefit Type Codes are selected. Used on a rollup summary on the Insurance Policy Object.</description>
        <formula>OR(
ISPICKVAL( AW_TypeCode__c, &quot;6&quot;),
ISPICKVAL( AW_TypeCode__c, &quot;006&quot;),
ISPICKVAL( AW_TypeCode__c, &quot;25&quot;),
ISPICKVAL( AW_TypeCode__c, &quot;025&quot;),
ISPICKVAL( AW_TypeCode__c, &quot;26&quot;),
ISPICKVAL( AW_TypeCode__c, &quot;026&quot;),
ISPICKVAL( AW_TypeCode__c, &quot;30&quot;),
ISPICKVAL( AW_TypeCode__c, &quot;030&quot;),
ISPICKVAL( AW_TypeCode__c, &quot;38&quot;),
ISPICKVAL( AW_TypeCode__c, &quot;038&quot;),
ISPICKVAL( AW_TypeCode__c, &quot;39&quot;),
ISPICKVAL( AW_TypeCode__c, &quot;039&quot;),
ISPICKVAL( AW_TypeCode__c, &quot;40&quot;),
ISPICKVAL( AW_TypeCode__c, &quot;040&quot;),
ISPICKVAL( AW_TypeCode__c, &quot;41&quot;),
ISPICKVAL( AW_TypeCode__c, &quot;041&quot;),
ISPICKVAL( AW_TypeCode__c, &quot;44&quot;),
ISPICKVAL( AW_TypeCode__c, &quot;044&quot;),
ISPICKVAL( AW_TypeCode__c, &quot;45&quot;),
ISPICKVAL( AW_TypeCode__c, &quot;045&quot;),
ISPICKVAL( AW_TypeCode__c, &quot;50&quot;),
ISPICKVAL( AW_TypeCode__c, &quot;050&quot;),
ISPICKVAL( AW_TypeCode__c, &quot;56&quot;),
ISPICKVAL( AW_TypeCode__c, &quot;056&quot;),
ISPICKVAL( AW_TypeCode__c, &quot;60&quot;),
ISPICKVAL( AW_TypeCode__c, &quot;060&quot;),
ISPICKVAL( AW_TypeCode__c, &quot;61&quot;),
ISPICKVAL( AW_TypeCode__c, &quot;061&quot;),
ISPICKVAL( AW_TypeCode__c, &quot;62&quot;),
ISPICKVAL( AW_TypeCode__c, &quot;062&quot;),
ISPICKVAL( AW_TypeCode__c, &quot;63&quot;),
ISPICKVAL( AW_TypeCode__c, &quot;063&quot;),
ISPICKVAL( AW_TypeCode__c, &quot;64&quot;),
ISPICKVAL( AW_TypeCode__c, &quot;064&quot;),
ISPICKVAL( AW_TypeCode__c, &quot;65&quot;),
ISPICKVAL( AW_TypeCode__c, &quot;065&quot;),
ISPICKVAL( AW_TypeCode__c, &quot;66&quot;),
ISPICKVAL( AW_TypeCode__c, &quot;066&quot;),
ISPICKVAL( AW_TypeCode__c, &quot;67&quot;),
ISPICKVAL( AW_TypeCode__c, &quot;067&quot;),
ISPICKVAL( AW_TypeCode__c, &quot;68&quot;),
ISPICKVAL( AW_TypeCode__c, &quot;068&quot;),
ISPICKVAL( AW_TypeCode__c, &quot;69&quot;),
ISPICKVAL( AW_TypeCode__c, &quot;069&quot;),
ISPICKVAL( AW_TypeCode__c, &quot;74&quot;),
ISPICKVAL( AW_TypeCode__c, &quot;074&quot;),
ISPICKVAL( AW_TypeCode__c, &quot;75&quot;),
ISPICKVAL( AW_TypeCode__c, &quot;075&quot;),
ISPICKVAL( AW_TypeCode__c, &quot;80&quot;),
ISPICKVAL( AW_TypeCode__c, &quot;080&quot;),
ISPICKVAL( AW_TypeCode__c, &quot;81&quot;),
ISPICKVAL( AW_TypeCode__c, &quot;081&quot;),
ISPICKVAL( AW_TypeCode__c, &quot;82&quot;),
ISPICKVAL( AW_TypeCode__c, &quot;082&quot;),
ISPICKVAL( AW_TypeCode__c, &quot;83&quot;),
ISPICKVAL( AW_TypeCode__c, &quot;083&quot;),
ISPICKVAL( AW_TypeCode__c, &quot;117&quot;),
ISPICKVAL( AW_TypeCode__c, &quot;118&quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lifestyle Protection Benefits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AW_OriginalBenefitAmount__c</fullName>
        <description>Original Benefit Amount for Insurance Policy Coverage</description>
        <label>Original Benefit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_StartDate__c</fullName>
        <description>Insurance Policy Coverage Start Date</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AW_StatusCode__c</fullName>
        <description>Insurance Policy Status Code</description>
        <label>Status Code</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_StatusReasonCode__c</fullName>
        <description>Insurance Policy Coverage Status Change Reason Code</description>
        <label>Status Reason Code</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_Term__c</fullName>
        <description>Insurance Policy Term</description>
        <label>Term</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_TypeCode__c</fullName>
        <description>Select Type</description>
        <label>Type Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>31</fullName>
                </value>
                <value>
                    <fullName>32</fullName>
                </value>
                <value>
                    <fullName>33</fullName>
                </value>
                <value>
                    <fullName>34</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_Type__c</fullName>
        <description>Select Insurance Policy Coverage Amount</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ABSOLUTE IMPAIRMENT</fullName>
                </value>
                <value>
                    <fullName>ABSOLUTE IMPAIRMENT (TERM)</fullName>
                </value>
                <value>
                    <fullName>ABSOLUTE IMPAIRMENT PLUS (TERM)</fullName>
                </value>
                <value>
                    <fullName>ABSOLUTE IMPARMENT PLUS</fullName>
                </value>
                <value>
                    <fullName>ABSOLUTE INCOME PROTECTOR</fullName>
                </value>
                <value>
                    <fullName>ABSOLUTE PROTECTOR (OD)</fullName>
                </value>
                <value>
                    <fullName>ABSOLUTE PROTECTOR (OOD)</fullName>
                </value>
                <value>
                    <fullName>ABSOLUTE PROTECTOR (OOD)(TERM)</fullName>
                </value>
                <value>
                    <fullName>ABSOLUTE PROTECTOR PLUS (OD)</fullName>
                </value>
                <value>
                    <fullName>ABSOLUTE PROTECTOR PLUS (OOD)</fullName>
                </value>
                <value>
                    <fullName>ABSOLUTE PROTECTOR PLUS (OOD)(TERM)</fullName>
                </value>
                <value>
                    <fullName>ACCIDENTAL DEATH</fullName>
                </value>
                <value>
                    <fullName>ACCIDENT BENEFIT</fullName>
                </value>
                <value>
                    <fullName>CAPITAL DISABILITY (OD)</fullName>
                </value>
                <value>
                    <fullName>CAPITAL DISABILITY (OOD)</fullName>
                </value>
                <value>
                    <fullName>CAPITAL DISABILITY (OOD)(TERM)</fullName>
                </value>
                <value>
                    <fullName>CAPITAL DISABILITY PLUS (OD)</fullName>
                </value>
                <value>
                    <fullName>CAPITAL DISABILITY PLUS (OOD)</fullName>
                </value>
                <value>
                    <fullName>CAPITAL DISABILITY PLUS (OOD)(TERM)</fullName>
                </value>
                <value>
                    <fullName>CAREABILITY BENEFIT</fullName>
                </value>
                <value>
                    <fullName>CHILD LIVING LIFESTYLE</fullName>
                </value>
                <value>
                    <fullName>CONTINUATION</fullName>
                </value>
                <value>
                    <fullName>CONTRIBUTION WAIVER ON DEATH</fullName>
                </value>
                <value>
                    <fullName>CONTRIB WAIVER PAYER DTH/DSB</fullName>
                </value>
                <value>
                    <fullName>CONVERSION</fullName>
                </value>
                <value>
                    <fullName>CONVERTIBLE LEVEL TERM</fullName>
                </value>
                <value>
                    <fullName>Critical Illness Cover</fullName>
                </value>
                <value>
                    <fullName>Disability Lump</fullName>
                </value>
                <value>
                    <fullName>Disability Monthly</fullName>
                </value>
                <value>
                    <fullName>EDUCATOR (OD)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMN_AutomaticContributionIncreasePerc__c</fullName>
        <description>Used for integration to populate Automatic Contribution Increase Percentage (ACI) for a Benefit from source systems (Compass/Lifestyle)</description>
        <label>Automatic Contribution Increase %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CMN_BenefitClassification__c</fullName>
        <description>Used for integration to populate Benefit Classification from source systems (Compass/Lifestyle).</description>
        <label>Benefit Classification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_ContributionAmount__c</fullName>
        <description>Used for integration to populate Contribution Amount from source systems (Compass/Lifestyle)</description>
        <label>Contribution Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CMN_ExclusionIndicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for integration to populate Exclusion Indicator  from source systems (Compass/Lifestyle).</description>
        <label>Exclusion Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMN_IncomeDisabilityClaimPercentage__c</fullName>
        <description>Used for integration to populate Income Disability Claim % from source systems (Compass/Lifestyle).</description>
        <label>Income Disability Claim %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CMN_LoadContributionAmount__c</fullName>
        <description>Used for integration to populate Load Contribution Amount from source systems (Compass/Lifestyle)</description>
        <label>Load Contribution Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CMN_LoadingIndicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for integration to populate Loading Indicator from source systems (Compass/Lifestyle)</description>
        <label>Loading Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMN_PortfolioName__c</fullName>
        <description>Used for integration to populate Portfolio Name from source systems (Compass/Lifestyle).</description>
        <label>Portfolio Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_StatusReason__c</fullName>
        <description>Used for integration to populate Status Reason from source systems (Compass/Lifestyle)</description>
        <label>Status Reason</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_Status__c</fullName>
        <description>Used for integration to populate Status from source systems (Compass/Lifestyle)</description>
        <label>Status</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_TerminalIllnessValue__c</fullName>
        <description>Used for integration to populate Terminal Illness Value from source systems (Compass/Lifestyle).</description>
        <label>Terminal Illness Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CMN_WaitingPeriod__c</fullName>
        <description>Used for integration to populate Waiting Period from source systems (Compass/Lifestyle)</description>
        <label>Waiting Period</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_InsurancePolicyCoverages</fullName>
        <filterScope>Everything</filterScope>
        <label>All Insurance Policy Coverages</label>
    </listViews>
    <listViews>
        <fullName>All_InsurancePolicyCoverages</fullName>
        <filterScope>Everything</filterScope>
        <label>All Insurance Policy Coverages</label>
    </listViews>
    <recordTypes>
        <fullName>CMN_LibertyInsurancePolicyCoverage</fullName>
        <active>true</active>
        <description>Record type to be used for Integration with Compass &amp; Lifestyle.</description>
        <label>Liberty Insurance Policy Coverage</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>